@@ -1,3 +1,11 @@
+2008-09-18  Janis Johnson  <janis187@us.ibm.com>
+
+	Backport from mainline:
+	2008-04-03  Janis Johnson  <janis187@us.ibm.com>
+	PR c/35712
+	* dfp.c (decimal_from_decnumber): Retain trailing zeroes for
+	decimal-float literal constant zero.
+
 2008-09-18  Andreas Krebbel  <krebbel1@de.ibm.com>
 
 	* doc/invoke.texi: Document -mhard-dfp, -mno-hard-dfp.
